--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=LoginDB
+application.title=C4 PROJECT
 application.vendor=LENOVO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,16 +29,41 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/LoginDB.jar
+dist.jar=${dist.dir}/C4_PROJECT.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/LoginDB
+dist.jlink.output=${dist.jlink.dir}/C4_PROJECT
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.4.jar=C:\\Users\\LENOVO\\Downloads\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=C:\\Users\\LENOVO\\Downloads\\commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=C:\\Users\\LENOVO\\Downloads\\commons-io-2.11.0.jar
+file.reference.commons-math3-3.6.1.jar-1=C:\\Users\\LENOVO\\OneDrive\\Escritorio\\commons-math3-3.6.1.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\LENOVO\\Downloads\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.5.4.jar=C:\\Users\\LENOVO\\Downloads\\jfreechart-1.5.4.jar
+file.reference.log4j-api-2.17.1.jar=C:\\Users\\LENOVO\\Downloads\\log4j-api-2.17.1.jar
+file.reference.log4j-core-2.17.1.jar=C:\\Users\\LENOVO\\Downloads\\log4j-core-2.17.1.jar
+file.reference.poi-5.2.3.jar=C:\\Users\\LENOVO\\Downloads\\poi-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar=C:\\Users\\LENOVO\\Downloads\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-full-5.2.3.jar=C:\\Users\\LENOVO\\Downloads\\poi-ooxml-full-5.2.3.jar
+file.reference.xmlbeans-5.1.1.jar-1=C:\\Users\\LENOVO\\Downloads\\xmlbeans-5.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQL5.1.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.MySQL5.1.classpath}:\
+    ${file.reference.commons-math3-3.6.1.jar-1}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar-1}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.log4j-api-2.17.1.jar}:\
+    ${file.reference.log4j-core-2.17.1.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.5.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,8 +72,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -73,7 +98,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=LoginDB
+jlink.launcher.name=C4_PROJECT
 main.class=Formularios.FormLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
